Added events for balancing-chemical-equations
Added checking for desired events
Started adding support for filtering based on relevant events
Changes to support scala repl prototype
Added instrumentation for monitoring server data as it is being collected
Added build information and entry point for sim event processing for server monitoring
Added IProguardKeepClass for potential library use
Use tab instead of comma as parameter delimiter, see #3136
Added multi-plots for post-processing, see #3136
Added events to search for in Molecule Polarity Tab 1, see #3136
Improved text output, see #3136
Added plotting for events vs time, see #3136
Improved post-processing, see #3136
Added processor module, see #3136