@@ -20,7 +20,7 @@ object phet {
 
   implicit def wrapLogSeq(i: Seq[EventLog]) = new LogSeqWrapper(i)
 
-  def series(log: EventLog, all: Seq[EventLog], value: Int => Double): XYSeries = seqSeries("Student " + all.indexOf(log), 0 to log.lastTime by 1000, value)
+  def timeSeries(log: EventLog, all: Seq[EventLog], value: Int => Double): XYSeries = seqSeries("Student " + all.indexOf(log), 0 to log.lastTime by 1000, value)
 
   def seqSeries(name: String, time: Seq[Int], value: Int => Double): XYSeries =
     new XYSeries(name) {
